--- a/assets/style.css
+++ b/assets/style.css
@@ -58,7 +58,7 @@ table tr:nth-child(2n){
 }
 
 table tr:nth-child(2n+1){
-    background-color: #da674a;
+    background-color: #ca563a;
 }
 
 .tabela{
