--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,10 @@ table tr:nth-child(2n+1){
     background-color: #ca563a;
 }
 
+table tr:nth-hover{
+    background-color: #fd997d;
+}
+
 .tabela{
     margin-top: 20px;
 }
