--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,10 @@ table tr:nth-child(2n+1){
     background-color: #ca563a;
 }
 
+table th:hover{
+    background-color: #fd997d;
+}
+
 table tr:hover{
     background-color: #fd997d;
 }
