--- a/assets/style.css
+++ b/assets/style.css
@@ -66,6 +66,10 @@ table tr:hover{
     cursor: pointer;
 }
 
+input[sumbit]:hover{
+       cursor: pointer;
+}
+
 .tabela{
     margin-top: 20px;
 }
